--- a/index.html
+++ b/index.html
@@ -138,19 +138,35 @@
   <script>
     // Configuração da data de início do relacionamento
     const dataInicio = new Date('2022-03-20'); // Altere aqui para a data de vocês
-
+  
     function atualizarContador() {
       const agora = new Date();
-      const diff = agora - dataInicio;
-
-      const anos = Math.floor(diff / (1000 * 60 * 60 * 24 * 365.25));
-      const meses = Math.floor(diff / (1000 * 60 * 60 * 24 * 30.44)) % 12;
-      const semanas = Math.floor(diff / (1000 * 60 * 60 * 24 * 7)) % 4;
-      const dias = Math.floor(diff / (1000 * 60 * 60 * 24)) % 7;
-      const horas = Math.floor(diff / (1000 * 60 * 60)) % 24;
-      const minutos = Math.floor(diff / (1000 * 60)) % 60;
-      const segundos = Math.floor(diff / 1000) % 60;
-
+  
+      // Calcula anos, meses e dias restantes
+      let anos = agora.getFullYear() - dataInicio.getFullYear();
+      let meses = agora.getMonth() - dataInicio.getMonth();
+      let dias = agora.getDate() - dataInicio.getDate();
+  
+      // Ajusta meses e anos se necessário
+      if (dias < 0) {
+        meses -= 1;
+        dias += new Date(agora.getFullYear(), agora.getMonth(), 0).getDate();
+      }
+      if (meses < 0) {
+        anos -= 1;
+        meses += 12;
+      }
+  
+      // Calcula semanas e o restante em dias
+      const semanas = Math.floor(dias / 7);
+      dias = dias % 7;
+  
+      // Calcula horas, minutos e segundos
+      const horas = agora.getHours();
+      const minutos = agora.getMinutes();
+      const segundos = agora.getSeconds();
+  
+      // Atualiza o HTML
       document.getElementById('anos').textContent = anos;
       document.getElementById('meses').textContent = meses;
       document.getElementById('semanas').textContent = semanas;
@@ -159,7 +175,7 @@
       document.getElementById('minutos').textContent = minutos;
       document.getElementById('segundos').textContent = segundos;
     }
-
+  
     // Atualiza o contador a cada segundo
     setInterval(atualizarContador, 1000);
   </script>
